--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>Welcome to my Website!</title>
+    <title>Welcome to Carl's Website!</title>
   </head>
   <body>
-    <h1>My Great Page!</h1>
+    <h1>Welcome to My Great Page!</h1>
   </body>
 </html> 
