Created initial Resume layout

--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to Carl's Website!</title>
+      <title>Carl Wirth</title>
   </head>
-  <body>
-    <h1>Welcome to My Great Page!</h1>
-    <h2>Thank you for stopping by.</h2>
-  </body>
-</html> 
+<body>
+    <div>
+  <header> 
+    <section id="Personal Info">
+Carl Wirth
+email
+linkedIn-Github
+Summary
+      </section>
+</header>
+
+<section id="Experience">
+Experience
+  Name of Employer
+  Date Range 
+  Position Job Title
+  Synopsis 
+
+</section>
+
+<section id="Education">  
+Education
+  School 
+  Dates
+  What you studied
+
+  </section>
+
+  <section id="references">  
+References
+    Name
+    Position
+    email
+
+
+    </section>
+
+    
+</div>
+
+</body>
+
+
+</html>
