layout for experience

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <div>
   <header> 
     <section id="Personal Info">
+
 Carl Wirth
 email
 linkedIn-Github
@@ -15,32 +16,40 @@ Summary
 </header>
 
 <section id="Experience">
-Experience
-  Name of Employer
-  Date Range 
-  Position Job Title
-  Synopsis 
+  <h2>Experience</h2>
+    <div class="Experience">
+      <h3>Name of Employer</h3>
+      <h3>Job Title</h3>
+      <h3>Date Range</h3>
+      <ul>
+          <li>Thing 1</li>
+          <li>Thing 2</li>
+      
+      </ul>
+
+    </div>  
 
 </section>
 
+
 <section id="Education">  
-Education
-  School 
-  Dates
-  What you studied
+  <h2>Education</h2>
+  <h3>School</h3>
+  <h3>Dates </h3>
+  <h3>What you studied </h3> 
+
+
+</section>
+
+  <section id="references">  
+    <h2>References</h2>
+    <h3>Name </h3>
+    <h3>Position</h3>
+    <h3>email</h3>
 
   </section>
 
-  <section id="references">  
-References
-    Name
-    Position
-    email
 
-
-    </section>
-
-    
 </div>
 
 </body>
