--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <div>
   <header> 
     <section id="Personal Info">
+      <h3>Carl Wirth</h3>
+      <h2>cdwirth1@gmail.com</h2>
+      <h2>Linked In</h2>
+      <h2>Summary</h2>
 
-Carl Wirth
-email
-linkedIn-Github
-Summary
-      </section>
+    </section>
 </header>
 
 <section id="Experience">
@@ -34,11 +34,12 @@ Summary
 
 <section id="Education">  
   <h2>Education</h2>
+  <div class="education">
   <h3>School</h3>
   <h3>Dates </h3>
   <h3>What you studied </h3> 
 
-
+  </Div>  
 </section>
 
   <section id="references">  
