--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Carl Wirth</title>
+      <title>Carl Wirth</title> 
+
+    <style> 
+      @import url('https://fonts.googleapis.com/css?family=Amiri|Great+Vibes|Literata|Merriweather|Nanum+Gothic&display=swap');
+
+      Body {
+        Font-family: Arial, Helvetica, sans-serif; 
+      }
+
+      h1 { font-family: literata, sans-serif; }
+      h2 { font-family: amiri, sans-serif; }
+      h3 { font-family: arvo, sans-serif; }
+      h4 { font-variant-caps: all-small-caps; }
+      footer { font-family:  great-vibes, 'Times New Roman', Times, serif; } 
+      
+    </style>
   </head>
+
 <body>
     <div>
   <header> 
     <section id="Personal Info">
-      <h3>Carl Wirth</h3>
+      <h1>Carl Wirth</h1>
       <h2>cdwirth1@gmail.com</h2>
       <h2>Linked In</h2>
       <h2>Summary</h2>
