--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       @import url('https://fonts.googleapis.com/css?family=Amiri|Great+Vibes|Literata|Merriweather|Nanum+Gothic&display=swap');
 
       Body {
+        margin-left: 50px;
+        margin-right: 50px;
         Font-family: Arial, Helvetica, sans-serif; 
       }
 
@@ -15,14 +17,14 @@
       h3 { font-family: arvo, sans-serif; }
       h4 { font-variant-caps: all-small-caps; }
       footer { font-family:  great-vibes, 'Times New Roman', Times, serif; } 
-      
+
     </style>
   </head>
 
 <body>
     <div>
   <header> 
-    <section id="Personal Info">
+    <section id="Personal Info"> 
       <h1>Carl Wirth</h1>
       <h2>cdwirth1@gmail.com</h2>
       <h2>Linked In</h2>
