added lorem ipsum

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       Body {
         margin-left: 50px;
         margin-right: 50px;
+
         Font-family: Arial, Helvetica, sans-serif; 
       }
 
@@ -25,10 +26,12 @@
     <div>
   <header> 
     <section id="Personal Info"> 
-      <h1>Carl Wirth</h1>
+      <h1>Carl Wirth</h1> 
       <h2>cdwirth1@gmail.com</h2>
       <h2>Linked In</h2>
-      <h2>Summary</h2>
+      <h2>Summary: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam repellendus dolorum et doloremque ex quod optio quae aliquam qui libero laboriosam officiis excepturi molestias, ipsum obcaecati quam vel officia eius.
+        
+      </h2>
 
     </section>
 </header>
