added css file and footer

--- a/index.html
+++ b/index.html
@@ -3,23 +3,8 @@
   <head>
       <title>Carl Wirth</title> 
 
-    <style> 
-      @import url('https://fonts.googleapis.com/css?family=Amiri|Great+Vibes|Literata|Merriweather|Nanum+Gothic&display=swap');
+    <link rel="stylesheet" href="site.css"> 
 
-      Body {
-        margin-left: 50px;
-        margin-right: 50px;
-
-        Font-family: Arial, Helvetica, sans-serif; 
-      }
-
-      h1 { font-family: literata, sans-serif; }
-      h2 { font-family: amiri, sans-serif; }
-      h3 { font-family: arvo, sans-serif; }
-      h4 { font-variant-caps: all-small-caps; }
-      footer { font-family:  great-vibes, 'Times New Roman', Times, serif; } 
-
-    </style>
   </head>
 
 <body>
@@ -30,7 +15,7 @@
       <h2>cdwirth1@gmail.com</h2>
       <h2>Linked In</h2>
       <h2>Summary: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam repellendus dolorum et doloremque ex quod optio quae aliquam qui libero laboriosam officiis excepturi molestias, ipsum obcaecati quam vel officia eius.
-        
+
       </h2>
 
     </section>
@@ -74,7 +59,7 @@
 
 </div>
 
+  <footer> This page developed by: Carl Wirth </footer>
 </body>
-
 
 </html>
